--- a/WebLucky_Serwer/Pages/LearnBlazor/_EditDeleteButton.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/_EditDeleteButton.razor
@@ -1,7 +1,7 @@
 ﻿@if (IsActive)
 {
-    <button type="button" class="btn btn-danger">Delete</button>
-    <button type="button" class="btn btn-success">Edit</button>
+    <button type="button" class="btn btn-danger">Danger@* Delete *@</button>
+    <button type="button" class="btn btn-success">Success@* Edit *@</button>
 }
 
 @code {
