Another way for Basic Event Call Back

--- a/WebLucky_Serwer/_Imports.razor
+++ b/WebLucky_Serwer/_Imports.razor
@@ -10,3 +10,4 @@
 @using WebLucky_Serwer.Shared
 @using Tangy_Models.LearnBlazorModels
 @using MudBlazor
+@using WebLucky_Serwer.Pages.LearnBlazor.LearnBlazorComponents
