--- a/WebLucky_Serwer/Pages/LearnBlazor/ParentComponent.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/ParentComponent.razor
@@ -2,7 +2,8 @@
 <h3>ParentComponent</h3>
 
 <_ChildComponent AddCount="@AddCount" SubtractCount="@SubtractCount">
-    This message From Parent
+    <ChildContent>Render Fragment From Parent! WooHOO!</ChildContent>
+    <DangerChildContent>Danger Fragment From Parent! WooHOO!</DangerChildContent>
 </_ChildComponent>
 <_ChildComponent AddCount="@AddCount">
     This message From Parent
