--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -39,7 +39,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Render Fragment
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazor/learnRouting">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Learn Routing
+            </NavLink>
+        </div>
     </nav>
 </div>
 
