--- a/WebLucky_Serwer/Pages/LearnBlazor/LearnRouting.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/LearnRouting.razor
@@ -1,11 +1,11 @@
 ﻿@page "/learnBlazor/learnRouting/{parameter1}"
-@page "/learnBlazor/learnRouting/{parameter1}/{parameter2}"
+@page "/learnBlazor/learnRouting/{parameter1:int}/{parameter2}"
 @page "/learnBlazor/learnRouting"
 @page "/learnRouting"
 @inject NavigationManager _NavigationManager
 
 <h3>LearnRouting</h3>
-<a href="learnRouting?Param1=Tangy&Param2=Blazor" class="btn btn-primary">Navigate to query parameter</a>
+<button class="btn btn-primary" @onclick="@NavigateToQueryParam">Navigate to query parameter</button>
 <button class="btn btn-success" @onclick="@LoadParameters">Load Parameters</button>
 <p>
     parameter1 = @parameter1
@@ -18,7 +18,7 @@
 
 @code {
     [Parameter]
-    public string parameter1 { get; set; }
+    public int parameter1 { get; set; }
     [Parameter]
     public string parameter2 { get; set; }
     public string Param1 { get; set; }
@@ -31,4 +31,10 @@
         Param1 = queryParam["Param1"];
         Param2 = queryParam["Param2"];
     }
+
+    private void NavigateToQueryParam()
+    {
+        _NavigationManager.NavigateTo("/learnBlazor/learnRouting/100/Coms");
+    }
+
 }
