--- a/WebLucky_Serwer/Pages/_Host.cshtml
+++ b/WebLucky_Serwer/Pages/_Host.cshtml
@@ -13,8 +13,8 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="WebLucky_Serwer.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
-    @* <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" /> *@
-    @* <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" /> *@
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     @* <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" /> *@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
