--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -44,6 +44,26 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Learn Routing
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazor/blazorJs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> BlazorJs
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/LearnBlazor/MudBoxComponent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mud Box
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/LearnBlazor/ToastComponent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mud Toast
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/LearnBlazor/ChartComponent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mud Chart
+            </NavLink>
+        </div>
     </nav>
 </div>
 
