--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -64,6 +64,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Mud Chart
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/LearnBlazor/BlazorJs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Mud Chart
+            </NavLink>
+        </div>
     </nav>
 </div>
 
