--- a/WebLucky_Serwer/_Imports.razor
+++ b/WebLucky_Serwer/_Imports.razor
@@ -11,3 +11,4 @@
 @using Tangy_Models.LearnBlazorModels
 @using MudBlazor
 @using WebLucky_Serwer.Pages.LearnBlazor.LearnBlazorComponents
+@using WebLucky_Serwer.Helper
