--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -66,7 +66,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/LearnBlazor/BlazorJs">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Mud Chart
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Blazor Js
+            </NavLink>
+        </div
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="learnBlazor/lifecycle">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Life Cycle Method
             </NavLink>
         </div>
     </nav>
