--- a/WebLucky_Serwer/Pages/LearnBlazor/LifeCycle.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/LifeCycle.razor
@@ -10,6 +10,7 @@
 <button class="btn btn-primary" @onclick="Increment">Count : @currentCount</button>
 
 @code {
+    int round = 0;
     private int currentCount = 0;
     List<string> EventType = new List<string>();
     private void Increment()
@@ -33,5 +34,21 @@
     {
         EventType.Add("แม่ Async : OnParametersSetAsync is called");
         await Task.Delay(1000);
+    }
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            currentCount = 111;
+        }
+        else
+        {
+            currentCount = 999;
+        }
+        EventType.Add($"แม่ : OnAfterRender is called {currentCount}....[{firstRender}] {++round}");
+    }
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        EventType.Add($"แม่ Async : OnAfterRenderAsync is called {currentCount}....[{firstRender}]");
     }
 }
