--- a/WebLucky_Serwer/Pages/LearnBlazor/LifeCycle.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/LifeCycle.razor
@@ -51,4 +51,9 @@
     {
         EventType.Add($"แม่ Async : OnAfterRenderAsync is called {currentCount}....[{firstRender}]");
     }
+    protected override bool ShouldRender()
+    {
+        EventType.Add("ShouldRender is called");
+        return true;
+    }
 }
