--- a/WebLucky_Serwer/Pages/LearnBlazor/LifeCycle.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/LifeCycle.razor
@@ -8,10 +8,15 @@
 }
 <hr>
 <button class="btn btn-primary" @onclick="Increment">Count : @currentCount</button>
+<hr>
+<div class="mt-2">
+    <button class="btn btn-success" @onclick=StartCountdown>Start Countdown</button> @Count
+</div>
 
 @code {
     int round = 0;
     private int currentCount = 0;
+    private int Count { get; set; } = 10;
     List<string> EventType = new List<string>();
     private void Increment()
     {
@@ -56,4 +61,18 @@
         EventType.Add("ShouldRender is called");
         return true;
     }
+    void StartCountdown()
+    {
+        var timer = new Timer(TimeCallBack, null, 5000, 1);
+    }
+
+    void TimeCallBack(object state)
+    {
+        if (Count > 0)
+        {
+            Count--;
+            InvokeAsync(StateHasChanged);
+        }
+    }
+
 }
