Loading Spinner & Create Category

--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -68,10 +68,15 @@
             <NavLink class="nav-link" href="/LearnBlazor/BlazorJs">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Blazor Js
             </NavLink>
-        </div
+        </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="learnBlazor/lifecycle">
+            <NavLink class="nav-link" href="learnBlazor/Lifecycle">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Life Cycle Method
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/category">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Category
             </NavLink>
         </div>
     </nav>
