--- a/WebLucky_Serwer/_Imports.razor
+++ b/WebLucky_Serwer/_Imports.razor
@@ -12,3 +12,5 @@
 @using MudBlazor
 @using WebLucky_Serwer.Pages.LearnBlazor.LearnBlazorComponents
 @using WebLucky_Serwer.Helper
+@using Tangy_Models
+@using Tangy_Business.Repository.IRepository
