--- a/WebLucky_Serwer/Pages/Category/CategoryList.razor
+++ b/WebLucky_Serwer/Pages/Category/CategoryList.razor
@@ -23,7 +23,7 @@
                     <tr>
                         <td>@item.Name</td>
                         <td>
-                            <NavLink href="" class="btn-primary btn">Edit</NavLink>
+                            <NavLink href=@($"/category/create/{item.Id}") class="btn-primary btn">Edit</NavLink>
                         </td>
                     </tr>
                 }
