Cleaning Up Task  && OnAfterRenderAsync

--- a/WebLucky_Serwer/Pages/Category/CategoryList.razor
+++ b/WebLucky_Serwer/Pages/Category/CategoryList.razor
@@ -65,15 +65,21 @@
     public bool IsLoading { get; set; } = true;
     public int deleteId { get; set; }
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        //await Task.Delay(1000);
-        await Task.Run(LoadCategories);
+        if (firstRender)
+        {
+            await Task.Delay(1000);
+            LoadCategories();
+        }
     }
     private void LoadCategories()
     {
+        IsLoading = true;
+        StateHasChanged();
         Categories = _cr.GetAll();
         IsLoading = false;
+        StateHasChanged();
     }
     private void ShowConfirm(int id)
     {
